# devne

./: .coverage  .envrc  .gitignore  LICENSE  MANIFEST.in  README.md  deps.nix  flake.nix  info  main.py  pyproject.toml  result  ss.drawio  ss.nix  ss.yaml  stack.yaml  start.sh  t  t.md  units.nix  update
.direnv/: flake-profile  flake-profile-1-link  flake-profile-100-link  flake-profile-101-link  flake-profile-102-link  flake-profile-103-link  flake-profile-104-link  flake-profile-105-link  flake-profile-11-link  flake-profile-12-link  flake-profile-13-link  flake-profile-14-link  flake-profile-15-link  flake-profile-16-link  flake-profile-17-link  flake-profile-18-link  flake-profile-19-link  flake-profile-2-link  flake-profile-20-link  flake-profile-21-link  flake-profile-22-link  flake-profile-23-link  flake-profile-24-link  flake-profile-25-link  flake-profile-26-link  flake-profile-27-link  flake-profile-28-link  flake-profile-29-link  flake-profile-3-link  flake-profile-30-link  flake-profile-31-link  flake-profile-32-link  flake-profile-33-link  flake-profile-34-link  flake-profile-35-link  flake-profile-36-link  flake-profile-37-link  flake-profile-38-link  flake-profile-39-link  flake-profile-40-link  (+62 more)
.ss/: flake.nix  ss.nix  units.nix
cli/: cli.md  dashboard.py  folder.py  main.py  project.md  run_command.py
doc/: cli.md  configure.md  file_generator.md  folder.md  project.md
folder/: README.md
project/: README.md  devne.drawio
src/: main.py
ss/: cli.py  dashboard.py  folder.py  main.py  run_command.py
ss_conf/: deps.nix  flake.nix  units.nix  (+1 more)
(+257 files in other folders)
