[tool.poetry]
name = "ss"
version = "0.1.0"
description = "super start"
authors = ["ian luo <ianluo63@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"

[tool.poetry.scripts]
ss = "ss.src:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
